3822B1FI1/9_gelu_ocl/beresnev_a/log.txt
In file included from /usr/local/cuda/include/CL/cl.h:20,
                 from /home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/beresnev_a/gelu_ocl.cpp:2:
/usr/local/cuda/include/CL/cl_version.h:22:104: note: ‘#pragma message: cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)’
   22 | #pragma message("cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)")
      |                                                                                                        ^
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/beresnev_a/gelu_ocl.cpp: In function ‘std::vector<float> GeluOCL(const std::vector<float>&)’:
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/beresnev_a/gelu_ocl.cpp:39:36: error: ‘CL_DEVICE_GPU’ was not declared in this scope; did you mean ‘CL_DEVICE_TYPE’?
   39 |     err = clGetDeviceIDs(platform, CL_DEVICE_GPU, 1, &device, nullptr);
      |                                    ^~~~~~~~~~~~~
      |                                    CL_DEVICE_TYPE
